base/frontend/sourcegraph-frontend.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/default-container: frontend
    description: Serves the frontend of Sourcegraph via HTTP(S).
  labels:
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
    app.kubernetes.io/component: frontend
  name: sourcegraph-frontend
spec:
  minReadySeconds: 10
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sourcegraph-frontend
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sourcegraph-frontend
        deploy: sourcegraph
    spec:
      containers:
      - name: frontend
        image: index.docker.io/sourcegraph/frontend:6.4.0@sha256:0912d2a747420679b027fa0f95f6a475e129750fe5ee73afe54a74d5b0eadb9f
        args:
        - serve
        terminationMessagePolicy: FallbackToLogsOnError
        livenessProbe:
          httpGet:
            path: /healthz
            port: debug
            scheme: HTTP
          initialDelaySeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: debug
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 5
        ports:
        - containerPort: 3080
          name: http
        - containerPort: 3090
          name: http-internal
        - containerPort: 6060
          name: debug
        resources:
          limits:
            cpu: "2"
            ephemeral-storage: "8Gi"
            memory: 4G
          requests:
            cpu: "2"
            ephemeral-storage: "4Gi"
            memory: 2G
      securityContext:
        runAsUser: 0
      serviceAccountName: sourcegraph-frontend
