base/frontend/frontend-internal.Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
    deploy: sourcegraph
  name: frontend-internal
spec:
  ports:
  - name: http-internal
    port: 80
    targetPort: http-internal
  selector:
    app: frontend
  type: ClusterIP
