base/frontend/frontend.Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "6060"
    sourcegraph.prometheus/scrape: "true"
  labels:
    app: frontend
    deploy: sourcegraph
  name: frontend
spec:
  ports:
  - name: http
    port: 30080
    targetPort: http
  selector:
    app: frontend
  type: ClusterIP
