base/frontend/sourcegraph-frontend.Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "6060"
    prometheus.io/scrape: "true"
  labels:
    app: sourcegraph-frontend
    deploy: sourcegraph
  name: sourcegraph-frontend
spec:
  ports:
  - name: http
    nodePort: 30080
    port: 30080
    targetPort: http
  - name: https
    nodePort: 30081
    port: 30081
    targetPort: https
  selector:
    app: sourcegraph-frontend
  type: NodePort
