base/frontend/frontend.Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # We can upload large files (extensions)
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"
    # See
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    # for more nginx annotations.
  labels:
    app: frontend
    deploy: sourcegraph
  name: frontend
spec:
  # See the customization guide (../../../docs/configure.md) for information
  # about configuring TLS
  # tls:
  # - hosts:
  #   - sourcegraph.example.com
  #   secretName: sourcegraph-tls
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 30080
    # If you're using TLS/SSL, uncomment the following line and replace 'sourcegraph.example.com' with the real
    # domain that you want to use for your Sourcegraph instance.
    # host: sourcegraph.example.com
